// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentLoader snapshots renders correctly the basic version 1`] = `
<svg
  aria-labelledby="snapshots-aria"
  role="img"
  style={Object {}}
  viewBox="0 0 476 124"
>
  <title
    id="snapshots-aria"
  >
    Loading...
  </title>
  <rect
    clipPath="url(#snapshots-diff)"
    height="100%"
    role="presentation"
    style={
      Object {
        "fill": "url(#snapshots-animated-diff)",
      }
    }
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clipPath
      id="snapshots-diff"
    >
      <rect
        height="6"
        rx="3"
        width="88"
        x="48"
        y="8"
      />
      <rect
        height="6"
        rx="3"
        width="52"
        x="48"
        y="26"
      />
      <rect
        height="6"
        rx="3"
        width="410"
        x="0"
        y="56"
      />
      <rect
        height="6"
        rx="3"
        width="380"
        x="0"
        y="72"
      />
      <rect
        height="6"
        rx="3"
        width="178"
        x="0"
        y="88"
      />
      <circle
        cx="20"
        cy="20"
        r="20"
      />
    </clipPath>
    <linearGradient
      id="snapshots-animated-diff"
    >
      <stop
        offset="0%"
        stopColor="#f5f6f7"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="-2; -2; 1"
        />
      </stop>
      <stop
        offset="50%"
        stopColor="#eee"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="-1; -1; 2"
        />
      </stop>
      <stop
        offset="100%"
        stopColor="#f5f6f7"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="0; 0; 3"
        />
      </stop>
    </linearGradient>
  </defs>
</svg>
`;

exports[`ContentLoader snapshots renders correctly with beforeMask 1`] = `
<svg
  aria-labelledby="snapshots-aria"
  role="img"
  style={Object {}}
>
  <title
    id="snapshots-aria"
  >
    Loading...
  </title>
  <rect
    role="outline1"
  />
  <rect
    role="outline2"
  />
  <rect
    clipPath="url(#snapshots-diff)"
    height="100%"
    role="presentation"
    style={
      Object {
        "fill": "url(#snapshots-animated-diff)",
      }
    }
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clipPath
      id="snapshots-diff"
    >
      <rect />
    </clipPath>
    <linearGradient
      id="snapshots-animated-diff"
    >
      <stop
        offset="0%"
        stopColor="#f5f6f7"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="-2; -2; 1"
        />
      </stop>
      <stop
        offset="50%"
        stopColor="#eee"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="-1; -1; 2"
        />
      </stop>
      <stop
        offset="100%"
        stopColor="#f5f6f7"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="0; 0; 3"
        />
      </stop>
    </linearGradient>
  </defs>
</svg>
`;

exports[`ContentLoader snapshots renders correctly with beforeMask 2`] = `
<svg
  aria-labelledby="snapshots-aria"
  role="img"
  style={Object {}}
>
  <title
    id="snapshots-aria"
  >
    Loading...
  </title>
  <rect
    clipPath="url(#snapshots-diff)"
    height="100%"
    role="presentation"
    style={
      Object {
        "fill": "url(#snapshots-animated-diff)",
      }
    }
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clipPath
      id="snapshots-diff"
    >
      <rect />
    </clipPath>
    <linearGradient
      id="snapshots-animated-diff"
    >
      <stop
        offset="0%"
        stopColor="#f5f6f7"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="-2; -2; 1"
        />
      </stop>
      <stop
        offset="50%"
        stopColor="#eee"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="-1; -1; 2"
        />
      </stop>
      <stop
        offset="100%"
        stopColor="#f5f6f7"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="0; 0; 3"
        />
      </stop>
    </linearGradient>
  </defs>
</svg>
`;

exports[`ContentLoader snapshots renders correctly with viewBox defined 1`] = `
<svg
  aria-labelledby="snapshots-aria"
  role="img"
  style={Object {}}
  viewBox="0 0 100 100"
>
  <title
    id="snapshots-aria"
  >
    Loading...
  </title>
  <rect
    clipPath="url(#snapshots-diff)"
    height="100%"
    role="presentation"
    style={
      Object {
        "fill": "url(#snapshots-animated-diff)",
      }
    }
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clipPath
      id="snapshots-diff"
    >
      <rect
        height="6"
        rx="3"
        width="88"
        x="48"
        y="8"
      />
      <rect
        height="6"
        rx="3"
        width="52"
        x="48"
        y="26"
      />
      <rect
        height="6"
        rx="3"
        width="410"
        x="0"
        y="56"
      />
      <rect
        height="6"
        rx="3"
        width="380"
        x="0"
        y="72"
      />
      <rect
        height="6"
        rx="3"
        width="178"
        x="0"
        y="88"
      />
      <circle
        cx="20"
        cy="20"
        r="20"
      />
    </clipPath>
    <linearGradient
      id="snapshots-animated-diff"
    >
      <stop
        offset="0%"
        stopColor="#f5f6f7"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="-2; -2; 1"
        />
      </stop>
      <stop
        offset="50%"
        stopColor="#eee"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="-1; -1; 2"
        />
      </stop>
      <stop
        offset="100%"
        stopColor="#f5f6f7"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="0; 0; 3"
        />
      </stop>
    </linearGradient>
  </defs>
</svg>
`;

exports[`ContentLoader snapshots renders correctly with viewBox defined and sizes defined too 1`] = `
<svg
  aria-labelledby="snapshots-aria"
  height={100}
  role="img"
  style={Object {}}
  viewBox="0 0 100 100"
  width={100}
>
  <title
    id="snapshots-aria"
  >
    Loading...
  </title>
  <rect
    clipPath="url(#snapshots-diff)"
    height="100%"
    role="presentation"
    style={
      Object {
        "fill": "url(#snapshots-animated-diff)",
      }
    }
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clipPath
      id="snapshots-diff"
    >
      <rect
        height="6"
        rx="3"
        width="88"
        x="48"
        y="8"
      />
      <rect
        height="6"
        rx="3"
        width="52"
        x="48"
        y="26"
      />
      <rect
        height="6"
        rx="3"
        width="410"
        x="0"
        y="56"
      />
      <rect
        height="6"
        rx="3"
        width="380"
        x="0"
        y="72"
      />
      <rect
        height="6"
        rx="3"
        width="178"
        x="0"
        y="88"
      />
      <circle
        cx="20"
        cy="20"
        r="20"
      />
    </clipPath>
    <linearGradient
      id="snapshots-animated-diff"
    >
      <stop
        offset="0%"
        stopColor="#f5f6f7"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="-2; -2; 1"
        />
      </stop>
      <stop
        offset="50%"
        stopColor="#eee"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="-1; -1; 2"
        />
      </stop>
      <stop
        offset="100%"
        stopColor="#f5f6f7"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="0; 0; 3"
        />
      </stop>
    </linearGradient>
  </defs>
</svg>
`;

exports[`ContentLoader snapshots renders correctly with viewBox empty 1`] = `
<svg
  aria-labelledby="snapshots-aria"
  role="img"
  style={Object {}}
  viewBox=""
>
  <title
    id="snapshots-aria"
  >
    Loading...
  </title>
  <rect
    clipPath="url(#snapshots-diff)"
    height="100%"
    role="presentation"
    style={
      Object {
        "fill": "url(#snapshots-animated-diff)",
      }
    }
    width="100%"
    x="0"
    y="0"
  />
  <defs>
    <clipPath
      id="snapshots-diff"
    >
      <rect
        height="6"
        rx="3"
        width="88"
        x="48"
        y="8"
      />
      <rect
        height="6"
        rx="3"
        width="52"
        x="48"
        y="26"
      />
      <rect
        height="6"
        rx="3"
        width="410"
        x="0"
        y="56"
      />
      <rect
        height="6"
        rx="3"
        width="380"
        x="0"
        y="72"
      />
      <rect
        height="6"
        rx="3"
        width="178"
        x="0"
        y="88"
      />
      <circle
        cx="20"
        cy="20"
        r="20"
      />
    </clipPath>
    <linearGradient
      id="snapshots-animated-diff"
    >
      <stop
        offset="0%"
        stopColor="#f5f6f7"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="-2; -2; 1"
        />
      </stop>
      <stop
        offset="50%"
        stopColor="#eee"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="-1; -1; 2"
        />
      </stop>
      <stop
        offset="100%"
        stopColor="#f5f6f7"
        stopOpacity={1}
      >
        <animate
          attributeName="offset"
          dur="1.2s"
          keyTimes="0; 0.25; 1"
          repeatCount="indefinite"
          values="0; 0; 3"
        />
      </stop>
    </linearGradient>
  </defs>
</svg>
`;
